--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -30,6 +30,11 @@
   "settings": {
     "react": {
       "version": "detect"
+    },
+    "import/resolver": {
+      "node": {
+        "paths": ["src"]
+      }
     }
   }
 }
