--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -24,6 +24,7 @@
     "react/react-in-jsx-scope": "off", // This rule is no longer needed in react ^17
     "react/jsx-filename-extension": ["warn", { "extensions": [".jsx", ".js"] }],
     "react/jsx-one-expression-per-line": "off",
+    "react/jsx-props-no-spreading": "off",
     "import/prefer-default-export": "off",
     "comma-dangle": "off"
   },
