--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -25,6 +25,7 @@
     "react/jsx-filename-extension": ["warn", { "extensions": [".jsx", ".js"] }],
     "react/jsx-one-expression-per-line": "off",
     "react/jsx-props-no-spreading": "off",
+    "react/display-name": "off",
     "import/prefer-default-export": "off",
     "comma-dangle": "off"
   },
