--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -26,6 +26,7 @@
     "react/jsx-one-expression-per-line": "off",
     "react/jsx-props-no-spreading": "off",
     "react/display-name": "off",
+    "react/destructuring-assignment": "off",
     "import/prefer-default-export": "off",
     "comma-dangle": "off"
   },
